testsuite/tests/explicit-dicts/should_fail/NoTyVar.stderr

NoTyVar.hs:13:13: error: [-Wincoherence (in -Wdefault), -Werror=incoherence]
    • Explicit dictionary application to: ‘Ord Int’
      is not allowed because of possible incoherence:
        There is a global instance for ‘Ord Int’
        Through an ancestor: There is a global instance for ‘Eq Int’
    • In the expression: maxInt ((absOrd :: Ord Int))
      In an equation for ‘maxAbsInt’:
          maxAbsInt = maxInt ((absOrd :: Ord Int))
